fix: replaced method for getting №0 element